--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro qui accusamus consectetur beatae dolor sequi eius repellendus, atque commodi rerum doloremque ipsam ea, quibusdam, quisquam nulla nam sunt inventore quidem.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni dolorem doloribus autem saepe vitae ipsam laboriosam blanditiis optio, aperiam, accusamus sequi dolores repellendus aspernatur ullam perspiciatis deserunt possimus totam culpa.</p>
         </article>
     </main>
 </body>
